Validation 'rules' for API

--- a/src/marketstack_api.toml
+++ b/src/marketstack_api.toml
@@ -1,3 +1,5 @@
+# Marketstack.com API - see https://marketstack.com/documentation_v2
+
 [eod]
 url = "https://api.marketstack.com/v2/eod"
 method = "GET"
